cha-pre-live-flux2/cha-eks-5b/namespaces/darchk-dev/namespace-darchk-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: darchk-dev
  name: darchk-dev
