cha-pre-live-flux2/cha-eks-5b/namespaces/darchk-dev/network-policy-apps.yaml
####################################################
## Allow ingress from darchk-dev and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-darchk-dev
  namespace: darchk-dev
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: darchk-dev
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from darchk-dev ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-darchk-dev
  namespace: darchk-dev
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: darchk-dev

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: darchk-dev
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

##################################################
## Allow traffic to confluent cloud peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-confluent
  namespace: darchk-dev
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.0/16
    ports:
    - port: 443
      protocol: TCP
    - port: 9092
      protocol: TCP

################
## ICIS monitoring ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: darchk-dev
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring

##################################################
## Allow external http traffic egress to IDDN  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-iddn
  namespace: darchk-dev
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.32.0/22
    ports:
    - port: 8000
      protocol: TCP
    - port: 9000
      protocol: TCP
    - port: 9100
      protocol: TCP

#########################################
## Allow SQL Server egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-sql-server
  namespace: darchk-dev
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 1433
      protocol: TCP
